# sqlfluff

./: abc.sql
plugins/: requirements.txt
plugins/sqlfluff-plugin-ambiguous_column/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-ambiguous_column/src/sqlfluff_plugin_ambiguous_column/: __init__.py  ambiguous_column.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-avoid_count_star/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-avoid_count_star/src/sqlfluff_plugin_avoid_count_star/: __init__.py  avoid_count_star.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-avoid_groupby_deduplicate/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-avoid_groupby_deduplicate/src/sqlfluff_plugin_avoid_groupby_deduplicate/: __init__.py  avoid_groupby_deduplicate.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-avoid_text_bytea/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-avoid_text_bytea/src/sqlfluff_plugin_avoid_text_bytea/: __init__.py  avoid_text_bytea.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-enforce_not_null/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-enforce_not_null/src/sqlfluff_plugin_enforce_not_null/: __init__.py  enforce_not_null.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-enum_set/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-enum_set/src/sqlfluff_plugin_enum_set/: __init__.py  enum_set.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-example/src/sqlfluff_plugin_example/: __init__.py
plugins/sqlfluff-plugin-index_varchar_length/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-index_varchar_length/src/sqlfluff_plugin_index_varchar_length/: __init__.py  index_varchar_length.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-limit_left_joins/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-limit_left_joins/src/sqlfluff_plugin_limit_left_joins/: __init__.py  limit_left_joins.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-lowercase/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-lowercase/src/sqlfluff_plugin_lowercase/: __init__.py  lowercase.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-namelength/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-namelength/src/sqlfluff_plugin_namelength/: __init__.py  namelength.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-nest/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-nest/src/sqlfluff_plugin_nest/: __init__.py  nest.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-no_like_prefix_wildcard/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-no_like_prefix_wildcard/src/sqlfluff_plugin_no_like_prefix_wildcard/: __init__.py  no_like_prefix_wildcard.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-no_like_prefix_wildcard/test/rules/test_cases/: Rule_Green_L003.yml
plugins/sqlfluff-plugin-no_order_by_rand/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-no_order_by_rand/src/sqlfluff_plugin_no_order_by_rand/: __init__.py  no_order_by_rand.py  plugin_default_config.cfg
plugins/sqlfluff-plugin-precision/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-prefer_timestamp/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-restrict_full_join/: MANIFEST.in  pyproject.toml
plugins/sqlfluff-plugin-update_delete_limit/: MANIFEST.in  pyproject.toml
(+14 files in other folders)
