[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Change this name in your plugin, e.g. company name or plugin purpose.
name = "sqlfluff-plugin-enforce_not_null"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "sqlfluff>=0.4.0"
]

[project.entry-points.sqlfluff]
# Change this name in your plugin, e.g. company name or plugin purpose.
sqlfluff_enforce_not_null = "sqlfluff_plugin_enforce_not_null"
