[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Change this name in your plugin, e.g. company name or plugin purpose.
name = "sqlfluff-plugin-no_order_by_rand"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "sqlfluff>=0.4.0"
]

[project.entry-points.sqlfluff]
# Change this name in your plugin, e.g. company name or plugin purpose.
sqlfluff_no_order_by_rand = "sqlfluff_plugin_no_order_by_rand"
